update with adding data

--- a/MongoDB_Semantic_kernel_RAG.ipynb
+++ b/MongoDB_Semantic_kernel_RAG.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMu6f2Inj8njae5uimABbSe",
+      "authorship_tag": "ABX9TyOEn+o2FWNxKim5CHOG22pY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -186,7 +186,7 @@
       "source": [
         "## The need for RAG\n",
         "\n",
-        "While LLM like OpenAI GPT-3.5 exhibit impressive wide range of skills they have a few limitations. Being trained on the internet data, they have a knowledge cutoff (Sep 2021 in case of OpenAI), and do not know about proprietary & personal data. They also have a tendency to hallucinate, that is they may confidently make up facts and provide answers that may seem to be accurate, but are actually incorrect. Here we will demonstrate what that means."
+        "While LLM like OpenAI GPT-3.5 exhibit impressive wide range of skills. Being trained on the internet data it knows about a wide range of topics and can answer things accurately"
       ],
       "metadata": {
         "id": "tDYs7C6OsMaq"
@@ -200,7 +200,7 @@
         "As a friendly AI Copilot answer the question: Did Albert Einstein have pets?\n",
         "\"\"\")\n",
         "\n",
-        "print(prompt())\n"
+        "print(prompt())"
       ],
       "metadata": {
         "colab": {
@@ -221,9 +221,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "But LLMs also have a few limitations: they have a knowledge cutoff (Sep 2021 in case of OpenAI), and do not know about proprietary & personal data. They also have a tendency to hallucinate, that is they may confidently make up facts and provide answers that may seem to be accurate, but are actually incorrect. Here we can test an example to  demonstrate that:"
+      ],
+      "metadata": {
+        "id": "Sf_VhxnI8xRT"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# Wrap your prompt in a function\n",
         "prompt = kernel.create_semantic_function(\"\"\"\n",
         "As a friendly AI Copilot answer the question: Did we have pets?\n",
         "\"\"\")\n",
@@ -244,6 +252,68 @@
           "name": "stdout",
           "text": [
             "Yes, humans have had pets for thousands of years. Pets are animals that are kept for companionship, entertainment, or emotional support. They can be found in various forms, such as dogs, cats, birds, fish, and even more exotic animals like reptiles or rodents. Pets have become an integral part of many households, providing love, companionship, and joy to their owners.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we will show how to augment the knowledge base of the LLM with proprietary data."
+      ],
+      "metadata": {
+        "id": "4LH9W5qvDJTw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "async def populate_memory(kernel: sk.Kernel) -> None:\n",
+        "    # Add some documents to the semantic memory\n",
+        "    await kernel.memory.save_information_async(\n",
+        "        collection=MONGODB_COLLECTION, id=\"1\", text=\"We enjoy coffee and Starbucks\"\n",
+        "    )\n",
+        "    await kernel.memory.save_information_async(\n",
+        "        collection=MONGODB_COLLECTION, id=\"2\", text=\"We are Associate Developer Advocates at MongoDB\"\n",
+        "    )\n",
+        "    await kernel.memory.save_information_async(\n",
+        "        collection=MONGODB_COLLECTION, id=\"3\", text=\"We have great coworkers and we love our teams!\"\n",
+        "    )\n",
+        "    await kernel.memory.save_information_async(\n",
+        "        collection=MONGODB_COLLECTION, id=\"4\", text=\"Our names are Anaiya and Tim\"\n",
+        "    )\n",
+        "    await kernel.memory.save_information_async(\n",
+        "        collection=MONGODB_COLLECTION, id=\"5\", text=\"We have been to New York City and Dublin\"\n",
+        "    )"
+      ],
+      "metadata": {
+        "id": "TMjlektXCQR_"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Populating memory...aka adding in documents\")\n",
+        "await populate_memory(kernel)\n",
+        "print(kernel)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bgOZle35DT62",
+        "outputId": "dab05130-ea57-49a7-b5f2-2480d10f1839"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Populating memory...aka adding in documents\n",
+            "<semantic_kernel.kernel.Kernel object at 0x7cd24ebf0490>\n"
           ]
         }
       ]
