updated with semantic search

--- a/MongoDB_Semantic_kernel_RAG.ipynb
+++ b/MongoDB_Semantic_kernel_RAG.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEn+o2FWNxKim5CHOG22pY",
+      "authorship_tag": "ABX9TyP/J8g3rUjOiy3R1FGLEfPk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,7 +197,7 @@
       "source": [
         "# Wrap your prompt in a function\n",
         "prompt = kernel.create_semantic_function(\"\"\"\n",
-        "As a friendly AI Copilot answer the question: Did Albert Einstein have pets?\n",
+        "As a friendly AI Copilot answer the question: Did Albert Einstein like coffee?\n",
         "\"\"\")\n",
         "\n",
         "print(prompt())"
@@ -207,15 +207,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ifeOyQXAsLmb",
-        "outputId": "c0b06b77-9c44-4059-9ca9-155f762c5a5b"
+        "outputId": "b4e818bf-17a6-4212-ab9e-8545c4d690ed"
       },
-      "execution_count": 11,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Yes, Albert Einstein did have pets. He had a few cats throughout his life, and his most famous cat was named Tiger. Einstein was known to have a great fondness for animals, particularly cats, and he often spoke about his love for them.\n"
+            "Yes, Albert Einstein was known to enjoy coffee. He was often seen with a cup of coffee in his hand and would frequently visit cafes to discuss scientific ideas with his colleagues over a cup of coffee.\n"
           ]
         }
       ]
@@ -233,7 +233,7 @@
       "cell_type": "code",
       "source": [
         "prompt = kernel.create_semantic_function(\"\"\"\n",
-        "As a friendly AI Copilot answer the question: Did we have pets?\n",
+        "As a friendly AI Copilot answer the question: Did we like coffee?\n",
         "\"\"\")\n",
         "\n",
         "print(prompt())"
@@ -243,15 +243,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TV87J3Om6np7",
-        "outputId": "f4ebd42b-8e0f-4bd1-9662-2aebaa520940"
+        "outputId": "3286a1e0-fad1-48af-e36a-2b00bb9fb719"
       },
-      "execution_count": 12,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Yes, humans have had pets for thousands of years. Pets are animals that are kept for companionship, entertainment, or emotional support. They can be found in various forms, such as dogs, cats, birds, fish, and even more exotic animals like reptiles or rodents. Pets have become an integral part of many households, providing love, companionship, and joy to their owners.\n"
+            "As an AI, I don't have personal preferences or experiences, so I can't say whether \"we\" liked coffee or not. However, coffee is a popular beverage enjoyed by many people around the world. It has a distinct taste and aroma that some people find appealing, while others may not enjoy it as much. Ultimately, whether someone likes coffee or not is a subjective matter and varies from person to person.\n"
           ]
         }
       ]
@@ -271,7 +271,7 @@
         "async def populate_memory(kernel: sk.Kernel) -> None:\n",
         "    # Add some documents to the semantic memory\n",
         "    await kernel.memory.save_information_async(\n",
-        "        collection=MONGODB_COLLECTION, id=\"1\", text=\"We enjoy coffee and Starbucks\"\n",
+        "        collection=MONGODB_COLLECTION, id=\"1\", text=\"We enjoy Starbucks\"\n",
         "    )\n",
         "    await kernel.memory.save_information_async(\n",
         "        collection=MONGODB_COLLECTION, id=\"2\", text=\"We are Associate Developer Advocates at MongoDB\"\n",
@@ -289,7 +289,7 @@
       "metadata": {
         "id": "TMjlektXCQR_"
       },
-      "execution_count": 16,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -304,9 +304,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bgOZle35DT62",
-        "outputId": "dab05130-ea57-49a7-b5f2-2480d10f1839"
+        "outputId": "001fdc92-b965-4338-d515-c2cf276fa74b"
       },
-      "execution_count": 17,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,6 +314,40 @@
           "text": [
             "Populating memory...aka adding in documents\n",
             "<semantic_kernel.kernel.Kernel object at 0x7cd24ebf0490>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## semantic search"
+      ],
+      "metadata": {
+        "id": "92BnfdJ5G9Sv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "result = await kernel.memory.search_async(MONGODB_COLLECTION, 'Do we like coffee?')\n",
+        "print(f\"Retreived document: {result[0].text}, {result[0].relevance}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8hA28-5PG6t8",
+        "outputId": "e85041c0-6f76-4fc2-aabc-3e6c999d8635"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Retreived document: We enjoy Starbucks, 0.9399794936180115\n"
           ]
         }
       ]
