--- a/OpenAI_Semantic_search_using_MongoDB_Atlas_vector_search.ipynb
+++ b/OpenAI_Semantic_search_using_MongoDB_Atlas_vector_search.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIHsa8PL7ECVon4saVpTXH",
+      "authorship_tag": "ABX9TyN0Jn1eJDFWf3DJKPMq+69o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,48 +38,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "iYMn0dXXdFbY"
-      },
-      "outputs": [],
-      "source": [
-        "!pip install pymongo openai"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install --upgrade openai\n"
-      ],
-      "metadata": {
+        "id": "iYMn0dXXdFbY",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "JQE7vLACaiK7",
-        "outputId": "5cc36d44-25de-403a-dc06-86d93fc01ae8"
+        "outputId": "98dab421-f11b-40b8-8f82-6de42b25725a"
       },
-      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: openai in /usr/local/lib/python3.10/dist-packages (1.3.3)\n",
-            "Requirement already satisfied: anyio<4,>=3.5.0 in /usr/local/lib/python3.10/dist-packages (from openai) (3.7.1)\n",
+            "Collecting pymongo\n",
+            "  Downloading pymongo-4.6.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (677 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m677.1/677.1 kB\u001b[0m \u001b[31m10.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting openai\n",
+            "  Downloading openai-1.3.3-py3-none-any.whl (220 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m220.3/220.3 kB\u001b[0m \u001b[31m24.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting dnspython<3.0.0,>=1.16.0 (from pymongo)\n",
+            "  Downloading dnspython-2.4.2-py3-none-any.whl (300 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m300.4/300.4 kB\u001b[0m \u001b[31m29.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: anyio<4,>=3.5.0 in /usr/local/lib/python3.10/dist-packages (from openai) (3.7.1)\n",
             "Requirement already satisfied: distro<2,>=1.7.0 in /usr/lib/python3/dist-packages (from openai) (1.7.0)\n",
-            "Requirement already satisfied: httpx<1,>=0.23.0 in /usr/local/lib/python3.10/dist-packages (from openai) (0.25.1)\n",
-            "Requirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.10/dist-packages (from openai) (1.10.13)\n",
+            "Collecting httpx<1,>=0.23.0 (from openai)\n",
+            "  Downloading httpx-0.25.1-py3-none-any.whl (75 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.0/75.0 kB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.10/dist-packages (from openai) (1.10.13)\n",
             "Requirement already satisfied: tqdm>4 in /usr/local/lib/python3.10/dist-packages (from openai) (4.66.1)\n",
             "Requirement already satisfied: typing-extensions<5,>=4.5 in /usr/local/lib/python3.10/dist-packages (from openai) (4.5.0)\n",
             "Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.10/dist-packages (from anyio<4,>=3.5.0->openai) (3.4)\n",
             "Requirement already satisfied: sniffio>=1.1 in /usr/local/lib/python3.10/dist-packages (from anyio<4,>=3.5.0->openai) (1.3.0)\n",
             "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<4,>=3.5.0->openai) (1.1.3)\n",
             "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (2023.7.22)\n",
-            "Requirement already satisfied: httpcore in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (1.0.2)\n",
-            "Requirement already satisfied: h11<0.15,>=0.13 in /usr/local/lib/python3.10/dist-packages (from httpcore->httpx<1,>=0.23.0->openai) (0.14.0)\n"
+            "Collecting httpcore (from httpx<1,>=0.23.0->openai)\n",
+            "  Downloading httpcore-1.0.2-py3-none-any.whl (76 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.9/76.9 kB\u001b[0m \u001b[31m7.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting h11<0.15,>=0.13 (from httpcore->httpx<1,>=0.23.0->openai)\n",
+            "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m6.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: h11, dnspython, pymongo, httpcore, httpx, openai\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "llmx 0.0.15a0 requires cohere, which is not installed.\n",
+            "llmx 0.0.15a0 requires tiktoken, which is not installed.\u001b[0m\u001b[31m\n",
+            "\u001b[0mSuccessfully installed dnspython-2.4.2 h11-0.14.0 httpcore-1.0.2 httpx-0.25.1 openai-1.3.3 pymongo-4.6.0\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install pymongo openai"
       ]
     },
     {
@@ -110,7 +118,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "63843f20-4b12-4eae-c49c-bd3b32889acc"
+        "outputId": "57ad72d4-8afb-4e34-aad1-1fea6eb3645b"
       },
       "execution_count": 2,
       "outputs": [
@@ -158,7 +166,7 @@
       "metadata": {
         "id": "k-G6WhNFdIvW"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -170,7 +178,7 @@
       "metadata": {
         "id": "On9e13ASwReq"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -192,7 +200,7 @@
       "metadata": {
         "id": "BMnE4BxSOCtH"
       },
-      "execution_count": 13,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -385,7 +393,7 @@
       "metadata": {
         "id": "34tib9TrMPg4"
       },
-      "execution_count": 17,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -398,37 +406,11 @@
         "    print(f'Movie Name: {movie[\"title\"]},\\nMovie Plot: {movie[\"plot\"]}\\n')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
         "collapsed": true,
-        "id": "kTqrip-hWULK",
-        "outputId": "6faa6c9b-7888-43b5-c10f-3ce10e6fafc6"
+        "id": "kTqrip-hWULK"
       },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Movie Name: The Navigator,\n",
-            "Movie Plot: Two spoiled rich people find themselves trapped on an empty passenger ship.\n",
-            "\n",
-            "Movie Name: The Four Horsemen of the Apocalypse,\n",
-            "Movie Plot: An extended family split up in France and Germany find themselves on opposing sides of the battlefield during World War I.\n",
-            "\n",
-            "Movie Name: Wings,\n",
-            "Movie Plot: Two young men, one rich, one middle class, who are in love with the same woman, become fighter pilots in World War I.\n",
-            "\n",
-            "Movie Name: Frankenstein,\n",
-            "Movie Plot: An obsessed scientist assembles a living being from parts of exhumed corpses.\n",
-            "\n",
-            "Movie Name: The Lost World,\n",
-            "Movie Plot: The first film adaptation of Sir Arthur Conan Doyle's classic novel about a land where prehistoric creatures still roam.\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
