--- a/[new_version]_llamaIndex+mongoDB_MetadataFiltering.ipynb
+++ b/[new_version]_llamaIndex+mongoDB_MetadataFiltering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMt2Oz+AljczuQ8/wbRyib/",
+      "authorship_tag": "ABX9TyPQYK4riLMaR0nXF3rmkHEY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -724,9 +724,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "60cGV4I5beyF",
-        "outputId": "dc4a699f-d674-457f-c4e7-95b86bdf9fe3"
+        "outputId": "8ba80d9d-2472-497e-f427-f78b1393c651"
       },
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -771,7 +771,7 @@
       "metadata": {
         "id": "n__y-ISW0T0g"
       },
-      "execution_count": 26,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -790,7 +790,7 @@
       "metadata": {
         "id": "Jkb26yvuUU52"
       },
-      "execution_count": 28,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -808,7 +808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 5,
       "metadata": {
         "id": "3Bwokc2oNUdi"
       },
@@ -827,32 +827,10 @@
         "!wget 'https://raw.githubusercontent.com/run-llama/llama_index/main/docs/examples/data/10k/uber_2021.pdf' -O 'data/10k/uber_2021.pdf'\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "iHT-YyPLHr9x",
-        "outputId": "c78d684d-1260-4d1e-dfbf-25290ed7fc6a"
+        "id": "iHT-YyPLHr9x"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2024-02-16 10:25:10--  https://raw.githubusercontent.com/run-llama/llama_index/main/docs/examples/data/10k/uber_2021.pdf\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 1880483 (1.8M) [application/octet-stream]\n",
-            "Saving to: ‘data/10k/uber_2021.pdf’\n",
-            "\n",
-            "data/10k/uber_2021. 100%[===================>]   1.79M  8.52MB/s    in 0.2s    \n",
-            "\n",
-            "2024-02-16 10:25:10 (8.52 MB/s) - ‘data/10k/uber_2021.pdf’ saved [1880483/1880483]\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -864,7 +842,7 @@
       "metadata": {
         "id": "KeMUF05Ey1Am"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -903,7 +881,7 @@
       "metadata": {
         "id": "XkaisfmcUPRy"
       },
-      "execution_count": 30,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -915,7 +893,7 @@
       "metadata": {
         "id": "3f_xrsNhjYoN"
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -930,8 +908,17 @@
       "metadata": {
         "id": "PXhn1iJbN8gR"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Process the PDF and store in Atlas Vector Search"
+      ],
+      "metadata": {
+        "id": "3kzVd0ql_C7x"
+      }
     },
     {
       "cell_type": "code",
@@ -976,7 +963,7 @@
         "id": "9l4FkTT1Cw-3",
         "outputId": "c2659145-c6bf-439a-b920-7df092263e2d"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1053,6 +1040,183 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##  Initialize Index (Optional)\n",
+        "\n",
+        "For data already in MongoDB you can initialize the index like this"
+      ],
+      "metadata": {
+        "id": "vjiOnbifLlMG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from llama_index.core import VectorStoreIndex, StorageContext\n",
+        "vector_store = MongoDBAtlasVectorSearch(mongodb_client, db_name=MONGODB_DB_NAME, collection_name=MONGODB_COLLECTION_NAME, index_name=ATLAS_VECTOR_SEARCH_INDEX_NAME)\n",
+        "index = VectorStoreIndex.from_vector_store(vector_store)\n"
+      ],
+      "metadata": {
+        "id": "P4zJqB5uLtQR"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Performing Semantic Search\n",
+        "\n",
+        "[Reference](https://docs.llamaindex.ai/en/stable/module_guides/querying/retriever/root.html)"
+      ],
+      "metadata": {
+        "id": "AZNSx_GYNkBz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "retriever = index.as_retriever(similarity_top_k=3)\n",
+        "nodes = retriever.retrieve(\"What was Uber's revenue?\")\n"
+      ],
+      "metadata": {
+        "id": "-TOWDr6ZNIhS"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for node in nodes:\n",
+        "    print(node)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AU2R1mPGNWgN",
+        "outputId": "91e6b0e5-e860-4ea0-a11c-67c31bfbd6dc"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Node ID: 681d2a66-97ef-486d-820c-25c1ec0efe8d\n",
+            "Text: Financial and Operational HighlightsYear Ended December 31,\n",
+            "Constant Currency (In millions, except percentages) 2020 2021 2020 to\n",
+            "2021 %Change 2020 to 2021 % Change Monthly Active Platform Consumers\n",
+            "(“MAPCs”) 93 118 27 %Trips  5,025 6,368 27 %Gross Bookings  $ 57,897 $\n",
+            "90,415 56 %53 % Revenue $ 11,139 $ 17,455 57 %54 % Net loss\n",
+            "attributable to ...\n",
+            "Score:  0.855\n",
+            "\n",
+            "Node ID: 2b04e088-7d95-4693-95c6-9976fc387c56\n",
+            "Text: UBER TECHNOLOGIES, INC.CONSOLIDATED STATEMENTS OF  OPERATIONS(In\n",
+            "millions, except share amounts which are ref lected in thousands, and\n",
+            "per share amounts)Year Ended December 31, 2019 2020 2021 Revenue $\n",
+            "13,000 $ 11,139 $ 17,455 Costs and expenses Cost of revenue, exclusive\n",
+            "of dep reciation and amortization shown separately below6,061 5,154\n",
+            "9,351 ...\n",
+            "Score:  0.851\n",
+            "\n",
+            "Node ID: 824a3448-ebfa-4b9c-9437-d18684414670\n",
+            "Text: Through our partnership with Arizona State University, over4,000\n",
+            "Drivers and their fami ly members have enrolled in an undergraduate\n",
+            "degree program.• Engagement:  We are focused on listening to and\n",
+            "responding to the ideas and concerns of Drivers and Merchants who use\n",
+            "our platform. We believe thatthe  best ideas can come from anywhere,\n",
+            "both insid...\n",
+            "Score:  0.848\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Performing Semantic Search with Metadata filtering"
+      ],
+      "metadata": {
+        "id": "o4qPp-EzOZmz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from llama_index.core.vector_stores import (\n",
+        "    MetadataFilter,\n",
+        "    MetadataFilters,\n",
+        "    ExactMatchFilter,\n",
+        "    FilterOperator,\n",
+        ")\n",
+        "filters = MetadataFilters(\n",
+        "    filters=[ExactMatchFilter(key=\"metadata.page_label\", value=\"131\")]\n",
+        ")\n",
+        "retriever = index.as_retriever(similarity_top_k=3, filters=filters)\n",
+        "nodes = retriever.retrieve(\"What was Uber's revenue?\")"
+      ],
+      "metadata": {
+        "id": "LedM9zYXOeHV"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for node in nodes:\n",
+        "    print(node)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JWkL-J7PO1KD",
+        "outputId": "149560ae-68e9-482f-b88a-efb2f940f729"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Node ID: e9ae9536-2a57-4a05-a840-48fe1601a18c\n",
+            "Text: Other Driver Classification MattersAdditionally, we  have\n",
+            "received other lawsuits and governmental inquiries in other\n",
+            "jurisdictions, and anticipate future claims, lawsuits, arbitration\n",
+            "proceedings,administrative  actions,  and  government  investigations\n",
+            "and  audits  challenging  our  classification  of  Drivers  as\n",
+            "independent  contractors  a...\n",
+            "Score:  0.770\n",
+            "\n",
+            "Node ID: 0630edba-db9c-4b6f-8be1-751024049a5d\n",
+            "Text: Uber filed a proof of claim in the bankruptcy court, and Levando\n",
+            "wski additionally asserted a claim against Uber alleging that Uber\n",
+            "failed toperform its obligations under an agreement with Otto Trucking\n",
+            ", LLC. For these claims, Uber and Levandowski reached a confidential\n",
+            "settlement in principle that isscheduled  for an approval hearing with\n",
+            "the ...\n",
+            "Score:  0.759\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Performing RAG"
+      ],
+      "metadata": {
+        "id": "usM5xicEOVdb"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "response = index.as_query_engine().query(\"What was Uber's revenue?\", )\n",
@@ -1065,7 +1229,7 @@
         "id": "pedifM5wxh1G",
         "outputId": "6ae1547f-1124-4464-a4ab-498d5156b2d5"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1088,7 +1252,7 @@
         "id": "R7to3GBNKOZq",
         "outputId": "0ba3f2b9-c9eb-4daf-f4d3-9dfffc66486f"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1102,7 +1266,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Metadata Filtering\n",
+        "## Performing RAG with Metadata Filtering\n",
         "\n",
         "Each LlamaIndex document contains a metadata field.\n",
         "The default metadata field contains following fields\n",
@@ -1154,7 +1318,7 @@
         "id": "zTh66z7aGQgs",
         "outputId": "6df85507-a5a2-4802-9605-9afe11e335f1"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
