--- a/Langchain_+_MongoDB_101.ipynb
+++ b/Langchain_+_MongoDB_101.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLK0Anc0cECNiEviFkzj+N",
+      "authorship_tag": "ABX9TyMC/KEWl8XubXYc+fwd9ibE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,18 +89,16 @@
         "\n",
         " Create an Atlas search index via Atlas UI -> Search -> JSON Editor with the following definition\n",
         " ```\n",
-        "  {\n",
-        "   \"mappings\": {\n",
-        "     \"dynamic\": true,\n",
-        "     \"fields\": {\n",
-        "       \"embedding\": {\n",
-        "         \"dimensions\": 1536,\n",
-        "         \"similarity\": \"cosine\",\n",
-        "         \"type\": \"knnVector\"\n",
-        "       }\n",
-        "     }\n",
-        "   }\n",
-        " }\n",
+        " {\n",
+        "   \"fields\":[\n",
+        "      {\n",
+        "         \"type\": \"vector\",\n",
+        "         \"path\": \"embedding\",\n",
+        "         \"numDimensions\": 1536,\n",
+        "         \"similarity\": \"cosine\"\n",
+        "      }\n",
+        "   ]\n",
+        "}\n",
         "```"
       ],
       "metadata": {
